@@ -1,5 +1,7 @@
 package umc.teamc.youthStepUp.global.config;
 
+import java.util.Arrays;
+import java.util.Collections;
 import java.util.List;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
@@ -12,11 +14,12 @@ public class CorsConfig {
     @Bean
     CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
-        configuration.setAllowedOrigins(List.of("http://localhost:5173", "https://youthstepup.n-e.kr",
-                "https://p4pzs8nr-5173.asse.devtunnels.ms", "https://youthstepup.vercel.app"));
-        configuration.setAllowedMethods(List.of("*"));
+        configuration.setAllowedOrigins(Arrays.asList("http://localhost:5173", "https://youthstepup.site",
+                "https://p4pzs8nr-5173.asse.devtunnels.ms"));
+        configuration.setAllowedMethods(Collections.singletonList("*")); //모든 요청 메서드를 허용
         configuration.setAllowedHeaders(List.of("*"));
         configuration.setAllowCredentials(true);
+        configuration.setMaxAge(3600L);
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
         source.registerCorsConfiguration("/**", configuration);
         return source;
